feat: use generated types for registries (#92)
* using generated models for Registries

* feat: apply generated registry model to rename function

* fix: correct registry state from openapi

---------

Co-authored-by: Patrick Vu <patrick.vu@sotatek.com>