@@ -541,10 +541,9 @@ public class SinglesigVleiIssuanceTest extends BaseIntegrationTest {
 
     public IssuerRegistry getOrCreateRegistry(SignifyClient client, Aid aid, String registryName) throws Exception {
         IssuerRegistry registry = IssuerRegistry.builder().build();
-        Object registries = client.registries().list(aid.name);
-        ArrayList<String> registriesBody = (ArrayList<String>) registries;
-        if (!registriesBody.isEmpty()) {
-            assertEquals(1, registriesBody.size());
+        List<Registry> registriesList = client.registries().list(aid.name);
+        if (!registriesList.isEmpty()) {
+            assertEquals(1, registriesList.size());
         } else {
             CreateRegistryArgs registryArgs = CreateRegistryArgs.builder().build();
             registryArgs.setName(aid.name);
@@ -552,12 +551,11 @@ public class SinglesigVleiIssuanceTest extends BaseIntegrationTest {
 
             RegistryResult regResult = client.registries().create(registryArgs);
             waitOperation(client, regResult.op());
-            registries = client.registries().list(aid.name);
+            registriesList = client.registries().list(aid.name);
 
-            registriesBody = (ArrayList<String>) registries;
-            LinkedHashMap<String, Object> registryBody = castObjectToLinkedHashMap(registriesBody.getFirst());
-            registry.setName(registryBody.get("name").toString());
-            registry.setRegk(registryBody.get("regk").toString());
+            Registry registryBody = registriesList.get(0);
+            registry.setName(registryBody.getName());
+            registry.setRegk(registryBody.getRegk());
         }
         return registry;
     }
